odoo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odoo
  template:
    metadata:
      labels:
        app: odoo
    spec:
      serviceAccountName: odoo-k8s-sa
      securityContext:
        fsGroup: 101
      nodeSelector:
        cloud.google.com/gke-spot: "true"

      containers:
      - name: odoo
        image: us-central1-docker.pkg.dev/votos-app-99/odoo/odoo19-enterprise:v1
        securityContext:
          runAsUser: 101
        ports:
        - containerPort: 8069
        resources:
          requests:
            cpu: "500m"
            memory: "1.5Gi"
          limits:
            cpu: "1000m"
            memory: "2.5Gi"
        volumeMounts:
        - name: odoo-storage
          mountPath: /var/lib/odoo
        - name: config-volume
          mountPath: /etc/odoo/odoo.conf
          subPath: odoo.conf
      volumes:
      - name: odoo-storage
        persistentVolumeClaim:
          claimName: odoo-data-pvc
      - name: config-volume
        configMap:
          name: odoo-config
