staging-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odoo-staging
  template:
    metadata:
      labels:
        app: odoo-staging
    spec:
      securityContext:
        runAsUser: 101
        runAsGroup: 101
        fsGroup: 101
      containers:
      - name: odoo
        image: us-central1-docker.pkg.dev/votos-app-99/odoo/odoo19-custom:latest
        ports:
        - containerPort: 8069
        volumeMounts:
        - name: odoo-data
          mountPath: /var/lib/odoo
        - name: config-volume
          mountPath: /etc/odoo/odoo.conf
          subPath: odoo.conf
      volumes:
      - name: odoo-data
        emptyDir: {}
      - name: config-volume
        configMap:
          name: odoo-config
