cliente2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo-app-cliente2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odoo-cliente2
  template:
    metadata:
      labels:
        app: odoo-cliente2
    spec:
      securityContext:
        fsGroup: 101
      nodeSelector:
        cloud.google.com/gke-spot: "true"
      containers:
      - name: odoo
        image: us-central1-docker.pkg.dev/votos-app-99/odoo/odoo19-enterprise:v1
        securityContext:
          runAsUser: 101
        ports:
        - containerPort: 8069
        resources:
          requests:
            cpu: "250m"
            memory: "768Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
        volumeMounts:
        - name: odoo-storage
          mountPath: /var/lib/odoo
        - name: config-volume
          mountPath: /etc/odoo/odoo.conf
          subPath: odoo.conf
      volumes:
      - name: odoo-storage
        persistentVolumeClaim:
          claimName: odoo-data-pvc
      - name: config-volume
        configMap:
          name: odoo-config-cliente2
---
apiVersion: v1
kind: Service
metadata:
  name: odoo-service-cliente2
spec:
  type: NodePort
  selector:
    app: odoo-cliente2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8069
