odoo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo-lb
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8069
  selector:
    app: odoo
